# chip8-interpreter

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h  disassembler.h  display.h  opcodes.h  window.h
roms/: README.md  program.ch8
src/: chip8.c  disassembler.c  display.c  main.c  opcodes.c  window.c
